--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Rup</h1>
-    <img src="Images/League of Legends-08-10-2022 22-57-45-015.jpg" width="400" height="300" alt="Tot rup">
+    <img src="League of Legends-08-10-2022 22-57-45-015.jpg" width="400" height="300" alt="Tot rup">
     <form>
         <input type="date" name="" id="">
     </form>
