--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Rup</h1>
+    <h1>Rup tot</h1>
     <img src="League of Legends-08-10-2022 22-57-45-015.jpg" width="400" height="300" alt="Tot rup">
     <form>
         <input type="date" name="" id="">
